# hollows_hunter

./: .appveyor.yml  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  _r_e_a_d_m_e_8md.html  annotated.html  class_h_h_params-members.html  class_h_h_params.html  class_h_h_params__inherit__graph.map  class_h_h_params__inherit__graph.md5  class_h_h_params_a0f0ccaf07a74a2332bdc15ddf439296b_cgraph.map  class_h_h_params_a0f0ccaf07a74a2332bdc15ddf439296b_cgraph.md5  class_h_h_params_a4d4a0f5e4334f4789dff7c5290fac4bf_cgraph.map  class_h_h_params_a4d4a0f5e4334f4789dff7c5290fac4bf_cgraph.md5  class_h_h_params_a642bbb19ed482e09f4312409a44e21c5_cgraph.map  class_h_h_params_a642bbb19ed482e09f4312409a44e21c5_cgraph.md5  class_h_h_params_ad3c3e5a7250906720808df84f8c9c477_cgraph.map  class_h_h_params_ad3c3e5a7250906720808df84f8c9c477_cgraph.md5  class_h_h_params_ae1bf54e6b2f8dc2e16f0e325d937f96c_cgraph.map  class_h_h_params_ae1bf54e6b2f8dc2e16f0e325d937f96c_cgraph.md5  class_h_h_params_af9c459d9b85e95a45920eef39bc4ba63_cgraph.map  class_h_h_params_af9c459d9b85e95a45920eef39bc4ba63_cgraph.md5  class_h_h_scan_report-members.html  class_h_h_scan_report.html  class_h_h_scan_report_a003c9bdcd02586fe059ce5cbf9200c94_cgraph.map  class_h_h_scan_report_a362c72fa9b6b529f6482ebd0b7ac943e_cgraph.map  class_h_h_scan_report_a362c72fa9b6b529f6482ebd0b7ac943e_cgraph.md5  class_h_h_scan_report_a4890340468abbdeb2a691292190a62b2_cgraph.map  class_h_h_scan_report_a4890340468abbdeb2a691292190a62b2_cgraph.md5  class_h_h_scan_report_a9ab734f7310164884397e86af99d90f6_cgraph.map  class_h_h_scan_report_a9ab734f7310164884397e86af99d90f6_cgraph.md5  class_h_h_scan_report_a9d63466cb4cb100244b164ae5e7cc846_cgraph.map  class_h_h_scan_report_a9d63466cb4cb100244b164ae5e7cc846_cgraph.md5  class_h_h_scan_report_ab833046e9e59cb66fe2f94c056c4f517_cgraph.map  class_h_h_scan_report_ab833046e9e59cb66fe2f94c056c4f517_cgraph.md5  class_h_h_scan_report_ad7283b381ccf47bc892e264ddd6eae90_cgraph.map  class_h_h_scan_report_ad7283b381ccf47bc892e264ddd6eae90_cgraph.md5  (+331 more)
krabs/: CMakeLists.txt
krabs_lib/: Microsoft.O365.Security.Native.ETW.dll.metagen  Microsoft.O365.Security.Native.ETW.xml
krabsetw/: .gitignore  CONTRIBUTING.md  O365.Security.Native.ETW.Debug.nuspec  O365.Security.Native.ETW.nuspec  krabsetw.nuspec
krabsetw/.github/workflows/: krabsetw.yml
krabsetw/Microsoft.O365.Security.Native.ETW/: .gitignore  AssemblyInfo.cpp  Conversions.hpp  ETWLib.cpp  Errors.hpp  EventRecord.hpp  EventRecordError.hpp  EventRecordMetadata.hpp  EventTraceProperties.hpp  Guid.hpp  IEventRecord.hpp  IEventRecordError.hpp  IEventRecordMetadata.hpp  ITrace.hpp  KernelProvider.hpp  KernelTrace.hpp  Microsoft.O365.Security.Native.ETW-Documentation.shfbproj  Microsoft.O365.Security.Native.ETW.vcxproj  Microsoft.O365.Security.Native.ETW.vcxproj.filters  NativePtr.hpp  Property.hpp  Provider.hpp  README.md  RawProvider.hpp  TraceStats.hpp  UserTrace.hpp
krabsetw/Microsoft.O365.Security.Native.ETW.NetCore/: Microsoft.O365.Security.Native.ETW.NetCore.vcxproj  readme.md
krabsetw/Microsoft.O365.Security.Native.ETW/.nuget/: NuGet.Config
krabsetw/Microsoft.O365.Security.Native.ETW/Filtering/: AnsiString.hpp  CountedString.hpp  EventFilter.hpp  Fluent.hpp  Predicate.hpp  UnicodeString.hpp
krabsetw/Microsoft.O365.Security.Native.ETW/Kernel/: KernelProviders.hpp
krabsetw/Microsoft.O365.Security.Native.ETW/Testing/: EventHeader.hpp  Proxy.hpp  RecordBuilder.hpp  SynthRecord.hpp
krabsetw/examples/ManagedExamples/: FakingEvents001.cs  KernelTrace001.cs  KernelTrace002.cs  ManagedExamples.csproj  Program.cs  UserTrace001.cs  UserTrace002.cs  UserTrace003.cs  UserTrace004.cs  UserTrace005.cs  UserTrace006_Rundown.cs  UserTrace007_StackTrace.cs  WppTrace001.cs
krabsetw/examples/NativeExamples/: NativeExamples.vcxproj  NativeExamples.vcxproj.filters  examples.h  kernel_and_user_trace_001.cpp  kernel_trace_001.cpp  kernel_trace_002.cpp  kernel_trace_003_rundown.cpp  main.cpp  multiple_providers_001.cpp  powershell.etl  testing_001.cpp  user_trace_001.cpp  user_trace_002.cpp  user_trace_003_no_predicates.cpp  user_trace_004.cpp  user_trace_005.cpp  user_trace_006_predicate_vectors.cpp  user_trace_007_rundown.cpp  user_trace_008_stacktrace.cpp  user_trace_009_from_file.cpp
krabsetw/krabs/: krabs.runsettings  krabs.sln
krabsetw/krabs/krabs/: etw.hpp  property.hpp  schema.hpp  trace.hpp
krabsetw/krabs/krabs/testing/: extended_data_builder.hpp
krabsetw/tests/ManagedETWTests/: EtwTestsCS.csproj  EtwTestsCS.runsettings  describe_Asserts.cs  describe_EventRecord.cs  describe_InvalidParsing.cs  describe_OnError.cs  describe_Proxy.cs  describe_UserTrace.cs
krabsetw/tests/ManagedETWTests/Events/: ImageLoadEvent.cs  LogonEvent.cs  PowerShellEvent.cs  WinINetEvent.cs
krabsetw/tests/krabstests/: krabstests.vcxproj  krabstests.vcxproj.filters  test_collection_view.cpp  test_event_callbacks.cpp  test_filter.cpp  test_guid.cpp  test_guid_parser.cpp  test_kernel_providers.cpp  test_parse_types.cpp  test_parser.cpp  test_record_builder.cpp  test_record_property_thunk.cpp  test_schema_key.cpp  test_symbol_clash.cpp  test_synth_record.cpp  test_trace_properties.cpp  test_user_providers.cpp
params_info/: param_base.h  params.h  params_list.h  pe_sieve_params_info.cpp  pe_sieve_params_info.h  pe_sieve_params_print.cpp  pe_sieve_params_print.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_10.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  defines_c.js  (+64 more)
util/: custom_buffer.h  ntddk.h  process_privilege.cpp  process_privilege.h  process_util.h  strings_util.cpp  strings_util.h  suspend.cpp  suspend.h  time_util.cpp  time_util.h  util.cpp  util.h
(+4 files in other folders)
